# cleanslate

./: Cargo.toml  README.md  ROADMAP.md  artifacts.toml  install.sh
docs/: architecture.md
src/: lib.rs  main.rs  patterns.rs  scanner.rs  time.rs  vcs.rs
tests/: cli.rs  test_artifact_detection.rs  test_integration.rs
